2009-05-05 Karl Lehenbauer <karl@apache.org>
    * Add new Rivet Tcl command,apache_table, which can query, get and set
      values in the Apache "notes", "headers_in", "headers_out",
      "err_headers_out" and "subprocess_env" tables.

    * Add new "upload" option "tempname" that'll return the name of the
      temporary file containing the upload.

    * When instantiating separate virtual interpreters, postpend an interpreter
      count to the self-created slave interpreter name, to keep 
      Tcl_CreateSlave from failing if two or more virtual hosts have the same 
      ServerName and don't have a port defined in the ServerName directive.

    * Detect and report failure of Tcl_CreateSlave rather than assuming it
      succeeded and dereferencing a null pointer when it didn't.  Also added
      asserts to detect null interpreter pointer.

    * Slightly improved error messages when a child init or exit function
      fails.

2009-05-01 Karl Lehenbauer <karl@apache.org>
    * Rename global request rec pointer from globalrr to 
      rivet_panic_request_rec, add rivet_panic_pool and
      rivet_panic_server_rec, grabbing those values from Rivet initialization
      rather than request handling so that they are initialized enough that
      Rivet_Panic can use them.  (Previously Rivet_Panic or Tcl_Panic at 
      initialization time caused a null-pointer-dereference segmentation 
      violation because no request was being served.

      In Rivet_Panic, avoid emitting the unparsed URI unless a request is
      being processed.

2009-04-27 Karl Lehenbauer <karl@apache.org>

    * src/apache-2/mod_rivet.c: In Rivet_SendContent, when checking to see
      if the file doesn't exist, check r->finfo.filetype rather than
      r->finfo.protection.  (The prior check failed to detect that the
      Rivet source file did not exist, causing zero length webpages to
      be sent rather than 404's.)

2009-01-16 Massimo Manghi <mxmanghi@apache.org>
