@@ -84,17 +84,21 @@ gethandleproc(ClientData instancedata, int direction, ClientData *handlePtr)
 }
 
 Tcl_ChannelType RivetChan = {
-    "apache_channel",
-    NULL,
-    closeproc,
-    inputproc,
-    outputproc,
-    NULL,
-    setoptionproc,
-    NULL,
-    watchproc,
-    gethandleproc,
-    NULL,
-    NULL
+    "apache_channel",           /* typeName */
+    TCL_CHANNEL_VERSION_4,      /* channel type version */
+    closeproc,                  /* close proc */
+    inputproc,                  /* input proc */
+    outputproc,                 /* output proc */
+    NULL,                       /* seek proc - can be null */
+    setoptionproc,              /* set option proc - can be null */
+    NULL,                       /* get option proc - can be null */
+    watchproc,                  /* watch proc */
+    gethandleproc,              /* get handle proc */
+    NULL,                       /* close 2 proc - can be null */
+    NULL,                       /* block mode proc - can be null */
+    NULL,                       /* flush proc - can be null */
+    NULL,                       /* handler proc - can be null */
+    NULL,                       /* wide seek proc - can be null if seekproc is*/
+    NULL                        /* thread action proc - can be null */
 };
 
